--- a/norman_ecal_fee/jlab/job.json.tmpl
+++ b/norman_ecal_fee/jlab/job.json.tmpl
@@ -1,6 +1,6 @@
 {
-    "run_number": ${run_number},
-    "detector": "${detector}",
+    "run_number": {{ job.run_number }},
+    "detector": "{{ job.detector }}",
     "filter_no_cuts": true,
     "filter_nevents_read": 50000,
     "filter_nevents_write": 12500000,
@@ -14,10 +14,10 @@
         "ana": "anaVtxTuple_cfg.py"
     },
     "input_files": {
-        "${events_1}": "events.slcio"
+        "{{ job.input_files['events'][0] }}": "events.slcio"
     },
     "output_files": {
-        "ptag:lcio_recon": "recon/lcio/${events_1_basename}_recon.slcio"
+        "ptag:lcio_recon": "recon/lcio/{{ job.input_files['events'][0] | basename }}_recon.slcio"
     },
     "output_dir": "output"
 }
