--- a/norman_ecal_fee/jlab/job.json.tmpl
+++ b/norman_ecal_fee/jlab/job.json.tmpl
@@ -1,4 +1,6 @@
 {
+    "job_id": {{ job.job_id }},
+    "seed": {{ job.job_id + 1000000 }},
     "run_number": {{ job.run_number }},
     "detector": "{{ job.detector }}",
     "filter_no_cuts": true,
